LPD-X Fix Test