@@ -25,6 +25,7 @@ import com.liferay.portal.kernel.security.permission.PermissionChecker;
 import com.liferay.portal.kernel.security.permission.ResourceActions;
 import com.liferay.portal.kernel.service.GroupLocalService;
 import com.liferay.portal.kernel.service.UserLocalService;
+import com.liferay.portal.kernel.test.rule.NewEnv;
 import com.liferay.portal.kernel.test.util.PropsTestUtil;
 import com.liferay.portal.kernel.test.util.RandomTestUtil;
 import com.liferay.portal.kernel.theme.ThemeDisplay;
@@ -107,6 +108,8 @@ public class SearchResultSummaryDisplayContextBuilderTest {
 			portletURL, searchResultSummaryDisplayContext.getPortletURL());
 	}
 
+	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.locale.providers=JRE,COMPAT,CLDR")
 	@Test
 	public void testCreationDate() throws Exception {
 		String entryClassName = RandomTestUtil.randomString();
@@ -124,27 +127,41 @@ public class SearchResultSummaryDisplayContextBuilderTest {
 
 		document.addKeyword(Field.CREATE_DATE, "20180425171442");
 
-		String javaLocaleProvider = System.getProperty("java.locale.providers");
-		boolean cldr = javaLocaleProvider.equals("CLDR");
-		boolean cldrAndJdk21 = cldr && JavaDetector.isJDK21();
-
-		_assertCreationDate(cldrAndJdk21 ? "Apr 25, 2018, 5:14\u202FPM" : "Apr 25, 2018 5:14 PM", document);
-		_assertCreationDate(LocaleUtil.BRAZIL, cldrAndJdk21 ? "25 de abr. de 2018 17:14": "25/04/2018 17:14", document);
-		_assertCreationDate(LocaleUtil.CHINA, cldrAndJdk21 ? "2018年4月25日 17:14":"2018-4-25 下午5:14", document);
-		_assertCreationDate(LocaleUtil.GERMANY, cldrAndJdk21 ? "25.04.2018, 17:14" : "25.04.2018 17:14", document);
-		_assertCreationDate(LocaleUtil.HUNGARY, cldrAndJdk21 ? "2018. ápr. 25. 17:14":"2018.04.25. 17:14", document);
-
-		// TODO Clean up after CLDR update is finished
-
+		_assertCreationDate(
+			JavaDetector.isJDK21() ? "Apr 25, 2018, 5:14\u202FPM" :
+				"Apr 25, 2018 5:14 PM",
+			document);
+		_assertCreationDate(
+			LocaleUtil.BRAZIL,
+			JavaDetector.isJDK21() ? "25 de abr. de 2018 17:14" :
+				"25/04/2018 17:14",
+			document);
+		_assertCreationDate(
+			LocaleUtil.CHINA,
+			JavaDetector.isJDK21() ? "2018年4月25日 17:14" : "2018-4-25 下午5:14",
+			document);
+		_assertCreationDate(
+			LocaleUtil.GERMANY,
+			JavaDetector.isJDK21() ? "25.04.2018, 17:14" : "25.04.2018 17:14",
+			document);
+		_assertCreationDate(
+			LocaleUtil.HUNGARY,
+			JavaDetector.isJDK21() ? "2018. ápr. 25. 17:14" :
+				"2018.04.25. 17:14",
+			document);
 		_assertCreationDate(
 			LocaleUtil.ITALY,
-			cldr ? cldrAndJdk21 ? "25 apr 2018, 17:14":"25/apr/2018 17:14" :
-				"25-apr-2018 17.14",
+			JavaDetector.isJDK21() ? "25 apr 2018, 17:14" : "25/apr/2018 17:14",
 			document);
 		_assertCreationDate(LocaleUtil.JAPAN, "2018/04/25 17:14", document);
 		_assertCreationDate(
-			LocaleUtil.NETHERLANDS, cldr ? cldrAndJdk21?"25 apr 2018 17:14":"25 apr. 2018 17:14" : "25-apr-2018 17:14", document);
-		_assertCreationDate(LocaleUtil.SPAIN, cldr ?  cldrAndJdk21 ? "25 abr 2018, 17:14":"25/04/2018 17:14" : "25-abr-2018 17:14", document);
+			LocaleUtil.NETHERLANDS,
+			JavaDetector.isJDK21() ? "25 apr 2018 17:14" : "25 apr. 2018 17:14",
+			document);
+		_assertCreationDate(
+			LocaleUtil.SPAIN,
+			JavaDetector.isJDK21() ? "25 abr 2018, 17:14" : "25/04/2018 17:14",
+			document);
 	}
 
 	@Test
